# redsquared0-client

./: CMakeLists.txt  README.md  main.cpp
redsquared0-anticheat/: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  RedSquared0-Anticheat.rc  RedSquared0-Anticheat.sln  RedSquared0-Anticheat.vcxproj  RedSquared0-Anticheat.vcxproj.filters  SECURITY.md  main.cpp  resource.h
redsquared0-anticheat/.github/: PULL_REQUEST_TEMPLATE.md
redsquared0-anticheat/AntiDebug/: AntiDebugger.hpp
redsquared0-anticheat/Common/: EvidenceLocker.cpp  Logger.hpp  json.hpp
redsquared0-anticheat/Core/: AntiCheat.cpp  AntiCheatLib.cpp  Detections.cpp  Preventions.cpp
redsquared0-anticheat/Network/: NetClient.cpp
redsquared0-anticheat/Network/Packets/: Packets.cpp
redsquared0-anticheat/Process/: Exports.cpp  Process.cpp  Process.hpp
redsquared0-anticheat/Server/: Program.cs  README.md
redsquared0-anticheat/Server/Network/: Handlers.cs  Server.cs
redsquared0-core/: Block.cpp  Block.hpp  CMakeLists.txt  Chunk.cpp  Chunk.hpp  Player.cpp  Player.hpp  README.md  World.cpp  World.hpp
redsquared0-engine/: CMakeLists.txt  Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
redsquared0-server/: LICENSE
redsquared0-tools/: CMakeLists.txt  world_generator.cpp
